--- a/index.html
+++ b/index.html
@@ -3,9 +3,80 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="config/css/estilo.css">
+    <title>Sparkle</title>
 </head>
+
 <body>
-    
+   <div class="retangulo">
+    <div class="quadrado_imagem">
+        <img src="config/img/undraw_to_the_moon_re_q21i.svg">
+    </div>
+    <div class="form">
+        <form action="#">
+            <div class="form-header">
+                <div class="titulo">
+                    <h1>CADASTRE-SE</h1>
+                </div>
+            <div class="botao_login">
+                <button><a href="#">Entrar</a></button>
+            </div>
+        </div>
+
+        <div class="dados">
+            <div class="input_dados">
+                <label for="nomecompleto">Nome completo</label>
+                <input id="nomecompleto" type="text" name="nomecompleto" placeholder="digite seu nome" required>
+            </div>
+
+            <div class="input_dados">
+                <label for="email">E-mail</label>
+                <input id="email" type="email" name="email" placeholder="digite seu e-mail" required>
+            </div>
+
+            <div class="input_dados">
+                <label for="numero">Telefone</label>
+                <input id="numero" type="tel" name="numero" placeholder="(xx)xxxx-xxxx" required>
+            </div>
+
+            <div class="input_dados">
+                <label for="senha">Senha</label>
+                <input id="senha" type="password" name="senha" placeholder="digite sua senha" required>
+            </div>
+
+            <div class="input_dados">
+                <label for="confirmsenha">Confirme sua senha</label>
+                <input id="confirmsenha" type="password" name="confirmsenha" placeholder="confirme sua senha" required>
+            </div>
+        </div>
+
+        <div class="genero">
+            <div class="genero_titulo">
+                <h6>Gênero:</h3>
+            </div>
+
+            <div class="genero_inputs">
+                <div class="genero">
+                    <input type="radio" id="female" name="gender">
+                    <label for="female">Feminino</label>
+                </div>
+
+                <div class="genero">
+                    <input type="radio" id="male" name="gender">
+                    <label for="male">Masculino</label>
+                </div>
+
+                <div class="genero">
+                    <input type="radio" id="others" name="gender">
+                    <label for="others">Outros</label>
+                </div>
+
+                <div class="genero">
+                    <input type="radio" id="none" name="gender">
+                    <label for="none">Prefiro não dizer</label>
+                </div>
+            </div>
+        </div>
+        
 </body>
 </html>
