Add branch 'estilização'

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         <div class="genero">
             <div class="genero_titulo">
-                <h6>Gênero:</h3>
+                <h6>Gênero:</h6>
             </div>
 
             <div class="genero_inputs">
@@ -77,6 +77,12 @@
                 </div>
             </div>
         </div>
+
+        <div class="botao_continue">
+            <button><a href="#">Continuar</a></button>
+        </div>
+        
+    </form>
         
 </body>
 </html>
