Finalização do esqueleto do projeto

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
     <div class="form">
         <form action="#">
-            <div class="form-header">
+            <div class="form_header">
                 <div class="titulo">
                     <h1>CADASTRE-SE</h1>
                 </div>
