Finalização da documentação

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <div class="form">
         <form action="#">
             <div class="form_header">
-                <div class="titulo">
-                    <h1>CADASTRE-SE</h1>
+                <div class="mensagem">
+                    <h1>Cadastre-se e dê o seu nome à uma estrela!</h1>
                 </div>
             <div class="botao_login">
                 <button><a href="#">Entrar</a></button>
